erDiagram
    BANK_ACCOUNT {
        varchar   account_number  PK
        bigint    client_id       FK
        varchar   name
        varchar   phone
        varchar   email
        decimal   account_balance
        varchar   bank_name
        varchar   ifsc_code
    }
    CLIENTS {
        bigint    client_id       PK
        varchar   account_number  FK
        varchar   name
        varchar   email           UK
        varchar   phone
        timestamp created_on
        varchar   account_state
        decimal   wallet_balance
    }
    AUTH {
        varchar   email           PK,FK
        varchar   password_hash
        timestamp created
        timestamp updated
        int       version
    }
    INSTRUMENTS {
        varchar   instrument_id   PK
        varchar   instrument_name UK
        boolean   active
        timestamp updated_on
    }
    ORDERS {
        bigint    order_id          PK
        bigint    client_id         FK
        bigint    account_id
        varchar   instrument_id     FK
        varchar   order_type
        varchar   side
        decimal   quantity
        decimal   price
        decimal   executed_price
        varchar   status
        varchar   idempotency_key   UK
        varchar   external_order_id
        timestamp created_at
        timestamp updated_at
    }
    ORDER_HISTORY {
        bigint    history_id        PK
        bigint    order_id          FK
        varchar   event_type
        varchar   previous_status
        varchar   new_status
        varchar   external_status
        varchar   external_order_id
        varchar   request_id
        varchar   failure_code
        varchar   failure_reason
        text      api_response
        timestamp event_timestamp
        timestamp created_at
    }
    PORTFOLIO_HOLDING {
        bigint    holding_id      PK
        bigint    client_id       FK
        varchar   instrument_id   FK
        int       quantity
        decimal   price_per_unit
        decimal   overall_gains
        timestamp created_at
        timestamp updated_at
    }
    PORTFOLIO_POSITIONS {
        bigint    position_id     PK
        bigint    client_id       FK
        varchar   instrument_id   FK
        int       quantity
        decimal   price_per_unit
        decimal   overall_gains
        timestamp created_at
        timestamp updated_at
    }

    CLIENTS              ||--o| BANK_ACCOUNT        : owns
    CLIENTS              ||--o| AUTH                : authenticates
    CLIENTS              ||--o{ ORDERS              : places
    ORDERS               ||--o{ ORDER_HISTORY       : audited_by
    ORDERS               }o--|| INSTRUMENTS         : trades
    CLIENTS              ||--o{ PORTFOLIO_HOLDING   : owns
    CLIENTS              ||--o{ PORTFOLIO_POSITIONS : owns
    PORTFOLIO_HOLDING    }o--|| INSTRUMENTS         : held_as
    PORTFOLIO_POSITIONS  }o--|| INSTRUMENTS         : held_as
